Fixed card overflow

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -19,6 +19,7 @@
         overflow: hidden;
         display: -webkit-box;
 
+        width: 100%;
         margin-bottom: 0.15rem;
 
         font-size: 0.9rem;
